# rusefi

./: .aiignore  .clang-format  .cursorrules  .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ADAPTIVE_WALL_WETTING_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Doxyfile  Makefile  README-mcp.md  README.md  README_devin.cursorrules.md  RUSEFI-CORE-MAP.md  WALL_WETTING_CLEANUP_REPORT.md  WALL_WETTING_MEMORY_OPTIMIZATION.md  WALL_WETTING_MODIFICATIONS.md  build-base.Dockerfile  build.gradle  compile_48way.sh  debug_wall_wetting.py  dependencies.gradle  efitime.h  engine_math.cpp  engine_math.h  event_queue.cpp  firmware.Dockerfile  flag.md  format.sh  gradle.properties  lgtm.yml  main.cpp  main.h  mcp_drive.py  pixi.toml  (+14 more)
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.md
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  readme.md
.junie/: guidelines.md  ts-help-topic.md  ts-readme.md
.vscode.example/: settings.json
android/: build.gradle  dependencies.gradle  gradle.properties  readme.md  settings.gradle
docs/: adding-new-trigger.md  board-configuration-override-hooks.md  calibration-compatibility.md  frontend.md  hardware-reinit-and-power-cycle.md  java-connectivity-context-review.md  java-connectivity-ui-unit-testing.md  java-gradle-structure-review.md  report.md
firmware/: .cproject  .gitattributes  .gitignore  .project  CHANGELOG.md  CHANGELOG.rusefi.md  DEVELOPER.md  Doxyfile  DoxygenLayout.xml  Makefile  Makefile.old  build-notes.txt  bundle.mk  check.c  check_illegal_conversion.sh  clean.bat  clean.sh  clean_build.bat  clean_compile_two_versions.bat  clean_compile_two_versions.sh  common.mk  common_libfirmware.mk  compile.bat  compile_and_program.bat  configuration_check.cpp  cov_config.bat  cov_run.bat  coverity.yml  deps.mk  docker_build.sh  docs_enums.mk  dump.bat  dump_debug.bat  dump_debug_egt.bat  dump_release.bat  e  egt2can.cpp  flash.bat  flash_bin.bat  flash_can.sh  (+93 more)
hardware/: .gitignore  common_parts.txt  generate_diffs.sh  license.txt  readme.html  readme.md
java_console/: .gitignore  README-sandboxes.md  build.gradle  build.xml  readme.md  rusefi.xml  rusefi_console_properties.xml  settings.gradle  test_log.mlg.Z  ts2c_fuelTable.bat  upload_file.sh  upload_server.sh
java_console_binary/: .gitignore
misc/libopenblt_jni/: CMakeLists.txt  openblt_jni.cpp  readme.md
misc/openblt_jni/: CMakeLists.txt  openblt_jni.cpp
(+11885 files in other folders)
